--- a/index.html
+++ b/index.html
@@ -1,111 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>WOIC 2025 Badge Generator</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" rel="stylesheet">
+
+  <!-- Cropper.js -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.css" rel="stylesheet" />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #14284b;
-      color: white;
-      padding: 20px;
+    :root{
+      --bg:#14284b;          /* WOIC dark blue */
+      --accent:#ffce00;      /* WOIC yellow  */
+      --card:#0f1f39;
     }
-    h1 { margin-bottom: 10px; }
-    #canvas {
-      margin-top: 20px;
-      border: 2px solid #ffce00;
-      border-radius: 20px;
-      max-width: 100%;
+    *{box-sizing:border-box}
+    body{
+      margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      background:var(--bg); color:#fff; line-height:1.4;
     }
-    #preview-container {
-      margin-top: 20px;
-      display: none;
+    .wrap{
+      max-width:980px; margin:0 auto; padding:24px;
+      display:flex; flex-direction:column; align-items:center; gap:16px;
     }
-    img { max-width: 100%; }
-    button, input[type="file"] {
-      margin-top: 15px;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 8px;
-      background: #ffce00;
-      font-weight: bold;
-      cursor: pointer;
+    h1{margin:0 0 4px}
+    .controls{
+      display:flex; flex-wrap:wrap; gap:12px; align-items:center; justify-content:center;
     }
-    button:hover { background: #e0b800; }
-  </style>
-</head>
-<body>
-  <h1>Create Your WOIC 2025 Badge</h1>
-  <p>Upload and crop your photo to generate your personalized badge.</p>
-
-  <input type="file" id="upload" accept="image/*"><br>
-
-  <!-- Crop Preview -->
-  <div id="preview-container">
-    <h3>Crop Your Photo</h3>
-    <img id="preview" alt="preview">
-    <br>
-    <button id="crop">Confirm Crop</button>
-  </div>
-
-  <!-- Final Badge -->
-  <canvas id="canvas" width="800" height="800"></canvas><br>
-  <button id="download">Download Badge</button>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
-  <script>
-    const upload = document.getElementById("upload");
-    const canvas = document.getElementById("canvas");
-    const ctx = canvas.getContext("2d");
-    const frame = new Image();
-    frame.src = "woic-frame.png"; // must be in same repo folder
-    let cropper;
-
-    // Show frame by default
-    frame.onload = function() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
+    .btn, .file{
+      background:var(--accent); color:#111; font-weight:700;
+      border:none; border-radius:10px; padding:10px 16px; cursor:pointer;
+    }
+    .btn.secondary{ background:#fff; }
+    .hint{opacity:.9}
+    canvas{
+      width:min(90vw,900px); height:auto;
+      border:2px solid var(--accent); border-radius:16px; background:#000;
+      display:block;
     }
 
-    upload.addEventListener("change", function(e) {
-      const reader = new FileReader();
-      reader.onload = function(event) {
-        document.getElementById("preview").src = event.target.result;
-        document.getElementById("preview-container").style.display = "block";
-        if (cropper) cropper.destroy();
-        cropper = new Cropper(document.getElementById("preview"), {
-          aspectRatio: 1, // square crop to fit frame
-          viewMode: 1,
-          movable: true,
-          zoomable: true,
-          scalable: true,
-          rotatable: false
-        });
-      }
-      reader.readAsDataURL(e.target.files[0]);
-    });
-
-    document.getElementById("crop").addEventListener("click", function() {
-      const croppedCanvas = cropper.getCroppedCanvas({
-        width: 800,
-        height: 800
-      });
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.drawImage(croppedCanvas, 0, 0, canvas.width, canvas.height);
-      ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
-      document.getElementById("preview-container").style.display = "none";
-    });
-
-    document.getElementById("download").addEventListener("click", function() {
-      const link = document.createElement("a");
-      link.download = "WOIC2025_Badge.png";
-      link.href = canvas.toDataURL("image/png");
-      link.click();
-    });
-  </script>
-</body>
-</html>
-
-
+    /* ---------- Crop Modal ---------- */
+    .modal{
+      position:fixed; inset:0; background:rgba(0,0,0,.7);
+      display:none; align-items:center; justify-content:center; z-index:9999;
+    }
+    .modal.open{ display:flex; }
+    .modal-card{
+      position:relative; background:var(--card); border-radius:16px;
+      width:min(92vw, 860px); height:min(90vh, 680px);
+      display:flex; flex-direction:column; overflow:hidden;
+      border:1px solid rgba(255,255,255,.15);
+    }
+    .modal-header, .modal-footer{
+      padding:10px 12px; background:rgba(0,0,0,.25);
+      display:flex; align-items:center; gap:12px;
+    }
+    .modal-header{ justify-content:space-between; }
+    .modal-body{
+      position:relative; flex:1; min-height:0; /* allow child to size */
+      display:flex; align-items:center; justify-content:center; overflow:hidden;
+      padding:8px;
+    }
+    #crop-stage{
+      position:relative; width:100%; height:100%;
+      max-width:820px; max-height:100%;
+      display:flex; align-items:center; justify-content:center; overflow:hidden;
+    }
+    #preview{
+      max-width:100%; max-height:100%;
+      display:block; user-select:none;
+      touch-action:none; /* better on mobile */
+      background:#111;
+    }
+    /* Overlay*
