--- a/index.html
+++ b/index.html
@@ -71,4 +71,208 @@
       touch-action:none; /* better on mobile */
       background:#111;
     }
-    /* Overlay*
+    /* Overlay the frame on top of the cropper so users see WYSIWYG */
+    #frame-overlay{
+      position:absolute; inset:auto; pointer-events:none; opacity:.9;
+      max-width:100%; max-height:100%;
+    }
+    .zoom-group{ display:flex; align-items:center; gap:8px; }
+    input[type="range"]{ width:220px; }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <h1>WOIC 2025 Badge Generator</h1>
+    <p class="hint">Upload and crop your photo. Download your badge with the official frame.</p>
+
+    <div class="controls">
+      <label class="btn file">
+        <input id="file" type="file" accept="image/*" style="display:none" />
+        Upload Photo
+      </label>
+      <button id="download" class="btn">Download Badge</button>
+      <button id="reset" class="btn secondary">Reset</button>
+    </div>
+
+    <!-- Final badge canvas -->
+    <canvas id="canvas" width="800" height="800" aria-label="Final badge preview"></canvas>
+  </div>
+
+  <!-- Cropping Modal -->
+  <div id="modal" class="modal" aria-hidden="true">
+    <div class="modal-card">
+      <div class="modal-header">
+        <strong>Adjust your photo</strong>
+        <div class="zoom-group">
+          <span>Zoom</span>
+          <input id="zoom" type="range" min="0.2" max="3" step="0.01" value="1" />
+          <button id="zoomOut" class="btn secondary">–</button>
+          <button id="zoomIn" class="btn secondary">+</button>
+        </div>
+      </div>
+      <div class="modal-body">
+        <div id="crop-stage">
+          <img id="preview" alt="Crop preview" />
+          <!-- frame overlay so user sees the ring while cropping -->
+          <img id="frame-overlay" alt="" />
+        </div>
+      </div>
+      <div class="modal-footer" style="justify-content:flex-end;">
+        <button id="cancel" class="btn secondary">Cancel</button>
+        <button id="confirm" class="btn">Confirm Crop</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.js"></script>
+  <script>
+    // Elements
+    const fileInput = document.getElementById('file');
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+
+    const modal = document.getElementById('modal');
+    const previewImg = document.getElementById('preview');
+    const frameOverlay = document.getElementById('frame-overlay');
+
+    const btnDownload = document.getElementById('download');
+    const btnReset = document.getElementById('reset');
+    const btnConfirm = document.getElementById('confirm');
+    const btnCancel = document.getElementById('cancel');
+    const zoomRange = document.getElementById('zoom');
+    const zoomIn = document.getElementById('zoomIn');
+    const zoomOut = document.getElementById('zoomOut');
+
+    // Load frame once; canvas will adopt the frame's natural size to avoid mismatch
+    const frame = new Image();
+    frame.src = 'woic-frame.png'; // keep this PNG with transparent center in the same folder
+
+    let cropper = null;
+
+    frame.onload = () => {
+      // Match canvas size to frame for pixel-perfect composition
+      canvas.width = frame.naturalWidth;
+      canvas.height = frame.naturalHeight;
+
+      // Draw frame by default
+      drawFrameOnly();
+      // Use same frame as an overlay inside the modal (scaled by CSS)
+      frameOverlay.src = frame.src;
+    };
+
+    function drawFrameOnly() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
+    }
+
+    // ---- Open Cropper Modal on file choose ----
+    fileInput.addEventListener('change', (e) => {
+      const file = e.target.files && e.target.files[0];
+      if (!file) return;
+
+      const reader = new FileReader();
+      reader.onload = (ev) => {
+        previewImg.src = ev.target.result;
+
+        // Show modal & lock page scroll
+        modal.classList.add('open');
+        modal.setAttribute('aria-hidden', 'false');
+        document.body.style.overflow = 'hidden';
+      };
+      reader.readAsDataURL(file);
+    });
+
+    // Initialize/destroy cropper when preview image changes visibility
+    previewImg.addEventListener('load', () => {
+      if (cropper) { cropper.destroy(); cropper = null; }
+
+      cropper = new Cropper(previewImg, {
+        aspectRatio: 1,
+        viewMode: 2,           // restrict the crop box to not exceed the canvas
+        dragMode: 'move',
+        background: false,
+        autoCropArea: 1,       // start maximized
+        responsive: true,
+        zoomOnWheel: false,    // we handle wheel ourselves to prevent page scroll
+        ready() {
+          zoomRange.value = 1;
+        }
+      });
+    });
+
+    // Mouse wheel inside modal = zoom (no page scroll)
+    document.getElementById('crop-stage').addEventListener('wheel', (e) => {
+      if (!cropper) return;
+      e.preventDefault(); // stop page scroll
+      const delta = e.deltaY < 0 ? 0.08 : -0.08;
+      cropper.zoom(delta);
+      // reflect current zoom in slider (approximate)
+      const data = cropper.getImageData();
+      const currentZoom = data.scaleX || 1;
+      zoomRange.value = Math.min(3, Math.max(0.2, currentZoom));
+    }, { passive: false });
+
+    // Zoom controls
+    zoomRange.addEventListener('input', () => {
+      if (!cropper) return;
+      cropper.zoomTo(parseFloat(zoomRange.value));
+    });
+    zoomIn.addEventListener('click', () => {
+      if (!cropper) return;
+      cropper.zoom(0.1);
+      const data = cropper.getImageData();
+      zoomRange.value = Math.min(3, Math.max(0.2, data.scaleX || 1));
+    });
+    zoomOut.addEventListener('click', () => {
+      if (!cropper) return;
+      cropper.zoom(-0.1);
+      const data = cropper.getImageData();
+      zoomRange.value = Math.min(3, Math.max(0.2, data.scaleX || 1));
+    });
+
+    // Confirm crop -> render to canvas exactly at frame size
+    btnConfirm.addEventListener('click', () => {
+      if (!cropper) return;
+
+      // Produce cropped bitmap at EXACT frame/canvas dimensions
+      const cropped = cropper.getCroppedCanvas({
+        width: canvas.width,
+        height: canvas.height
+      });
+
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.drawImage(cropped, 0, 0, canvas.width, canvas.height);
+      ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
+
+      closeModal();
+    });
+
+    btnCancel.addEventListener('click', () => {
+      closeModal();
+    });
+
+    function closeModal() {
+      if (cropper) { cropper.destroy(); cropper = null; }
+      modal.classList.remove('open');
+      modal.setAttribute('aria-hidden', 'true');
+      document.body.style.overflow = '';
+      previewImg.src = '';
+    }
+
+    // Download final PNG
+    btnDownload.addEventListener('click', () => {
+      const link = document.createElement('a');
+      link.download = 'WOIC2025_Badge.png';
+      link.href = canvas.toDataURL('image/png');
+      link.click();
+    });
+
+    // Reset to frame only
+    btnReset.addEventListener('click', () => {
+      fileInput.value = '';
+      drawFrameOnly();
+    });
+  </script>
+</body>
+</html>
+
