--- a/index.html
+++ b/index.html
@@ -8,117 +8,114 @@
   <!-- Cropper.js -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.css" rel="stylesheet" />
   <style>
-    :root{
-      --bg:#14284b;          /* WOIC dark blue */
-      --accent:#ffce00;      /* WOIC yellow  */
-      --card:#0f1f39;
+    :root {
+      --bg: #14284b;
+      --accent: #ffce00;
+      --btn-font: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
     }
-    *{box-sizing:border-box}
-    body{
-      margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-      background:var(--bg); color:#fff; line-height:1.4;
+    body {
+      margin: 0;
+      font-family: var(--btn-font);
+      background: var(--bg);
+      color: #fff;
+      text-align: center;
+      padding: 24px;
     }
-    .wrap{
-      max-width:980px; margin:0 auto; padding:24px;
-      display:flex; flex-direction:column; align-items:center; gap:16px;
+    h1 { margin: 0 0 10px; }
+    canvas {
+      width: min(90vw, 800px);
+      height: auto;
+      border: 2px solid var(--accent);
+      border-radius: 16px;
+      background: #000;
+      margin-top: 20px;
     }
-    h1{margin:0 0 4px}
-    .controls{
-      display:flex; flex-wrap:wrap; gap:12px; align-items:center; justify-content:center;
+    .controls {
+      margin-top: 16px;
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+      flex-wrap: wrap;
     }
-    .btn, .file{
-      background:var(--accent); color:#111; font-weight:700;
-      border:none; border-radius:10px; padding:10px 16px; cursor:pointer;
+    .btn {
+      background: var(--accent);
+      color: #111;
+      font-family: var(--btn-font);
+      font-weight: 700;
+      border: none;
+      border-radius: 8px;
+      padding: 12px 24px;
+      font-size: 16px;
+      cursor: pointer;
+      min-width: 160px;
+      text-align: center;
     }
-    .btn.secondary{ background:#fff; }
-    .hint{opacity:.9}
-    canvas{
-      width:min(90vw,900px); height:auto;
-      border:2px solid var(--accent); border-radius:16px; background:#000;
-      display:block;
-    }
+    .btn:hover { background: #e0b800; }
+    input[type="file"] { display: none; }
 
-    /* ---------- Crop Modal ---------- */
-    .modal{
-      position:fixed; inset:0; background:rgba(0,0,0,.7);
-      display:none; align-items:center; justify-content:center; z-index:9999;
+    /* Crop modal */
+    .modal {
+      position: fixed; inset: 0;
+      background: rgba(0,0,0,.7);
+      display: none; align-items: center; justify-content: center;
+      z-index: 9999;
     }
-    .modal.open{ display:flex; }
-    .modal-card{
-      position:relative; background:var(--card); border-radius:16px;
-      width:min(92vw, 860px); height:min(90vh, 680px);
-      display:flex; flex-direction:column; overflow:hidden;
-      border:1px solid rgba(255,255,255,.15);
+    .modal.open { display: flex; }
+    .modal-card {
+      background: #0f1f39;
+      border-radius: 16px;
+      width: min(92vw, 860px);
+      height: min(90vh, 680px);
+      display: flex; flex-direction: column;
+      overflow: hidden;
     }
-    .modal-header, .modal-footer{
-      padding:10px 12px; background:rgba(0,0,0,.25);
-      display:flex; align-items:center; gap:12px;
+    .modal-body {
+      flex: 1; display: flex; align-items: center; justify-content: center;
+      position: relative; overflow: hidden;
     }
-    .modal-header{ justify-content:space-between; }
-    .modal-body{
-      position:relative; flex:1; min-height:0; /* allow child to size */
-      display:flex; align-items:center; justify-content:center; overflow:hidden;
-      padding:8px;
+    #preview {
+      max-width: 100%; max-height: 100%;
+      display: block; background: #111;
+      user-select: none; touch-action: none;
     }
-    #crop-stage{
-      position:relative; width:100%; height:100%;
-      max-width:820px; max-height:100%;
-      display:flex; align-items:center; justify-content:center; overflow:hidden;
+    #frame-overlay {
+      position: absolute; inset: 0;
+      max-width: 100%; max-height: 100%;
+      pointer-events: none;
     }
-    #preview{
-      max-width:100%; max-height:100%;
-      display:block; user-select:none;
-      touch-action:none; /* better on mobile */
-      background:#111;
+    .modal-footer {
+      padding: 12px;
+      display: flex; justify-content: center; gap: 12px;
+      background: rgba(0,0,0,.25);
     }
-    /* Overlay the frame on top of the cropper so users see WYSIWYG */
-    #frame-overlay{
-      position:absolute; inset:auto; pointer-events:none; opacity:.9;
-      max-width:100%; max-height:100%;
-    }
-    .zoom-group{ display:flex; align-items:center; gap:8px; }
-    input[type="range"]{ width:220px; }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <h1>WOIC 2025 Badge Generator</h1>
-    <p class="hint">Upload and crop your photo. Download your badge with the official frame.</p>
+  <h1>WOIC 2025 Badge Generator</h1>
+  <p>Upload and adjust your photo, then download your badge with the official frame.</p>
 
-    <div class="controls">
-      <label class="btn file">
-        <input id="file" type="file" accept="image/*" style="display:none" />
-        Upload Photo
-      </label>
-      <button id="download" class="btn">Download Badge</button>
-      <button id="reset" class="btn secondary">Reset</button>
-    </div>
-
-    <!-- Final badge canvas -->
-    <canvas id="canvas" width="800" height="800" aria-label="Final badge preview"></canvas>
+  <!-- Buttons -->
+  <div class="controls">
+    <label class="btn">
+      <input id="file" type="file" accept="image/*" />
+      Upload Photo
+    </label>
+    <button id="download" class="btn">Download Badge</button>
+    <button id="reset" class="btn">Reset</button>
   </div>
 
+  <!-- Final Badge -->
+  <canvas id="canvas" width="800" height="800"></canvas>
+
   <!-- Cropping Modal -->
-  <div id="modal" class="modal" aria-hidden="true">
+  <div id="modal" class="modal">
     <div class="modal-card">
-      <div class="modal-header">
-        <strong>Adjust your photo</strong>
-        <div class="zoom-group">
-          <span>Zoom</span>
-          <input id="zoom" type="range" min="0.2" max="3" step="0.01" value="1" />
-          <button id="zoomOut" class="btn secondary">–</button>
-          <button id="zoomIn" class="btn secondary">+</button>
-        </div>
-      </div>
       <div class="modal-body">
-        <div id="crop-stage">
-          <img id="preview" alt="Crop preview" />
-          <!-- frame overlay so user sees the ring while cropping -->
-          <img id="frame-overlay" alt="" />
-        </div>
+        <img id="preview" alt="Crop preview" />
+        <img id="frame-overlay" alt="" />
       </div>
-      <div class="modal-footer" style="justify-content:flex-end;">
-        <button id="cancel" class="btn secondary">Cancel</button>
+      <div class="modal-footer">
+        <button id="cancel" class="btn">Cancel</button>
         <button id="confirm" class="btn">Confirm Crop</button>
       </div>
     </div>
@@ -126,7 +123,6 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.js"></script>
   <script>
-    // Elements
     const fileInput = document.getElementById('file');
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
@@ -134,29 +130,19 @@
     const modal = document.getElementById('modal');
     const previewImg = document.getElementById('preview');
     const frameOverlay = document.getElementById('frame-overlay');
-
     const btnDownload = document.getElementById('download');
     const btnReset = document.getElementById('reset');
     const btnConfirm = document.getElementById('confirm');
     const btnCancel = document.getElementById('cancel');
-    const zoomRange = document.getElementById('zoom');
-    const zoomIn = document.getElementById('zoomIn');
-    const zoomOut = document.getElementById('zoomOut');
 
-    // Load frame once; canvas will adopt the frame's natural size to avoid mismatch
     const frame = new Image();
-    frame.src = 'woic-frame.png'; // keep this PNG with transparent center in the same folder
-
+    frame.src = 'woic-frame.png'; // must be in repo folder
     let cropper = null;
 
     frame.onload = () => {
-      // Match canvas size to frame for pixel-perfect composition
       canvas.width = frame.naturalWidth;
       canvas.height = frame.naturalHeight;
-
-      // Draw frame by default
       drawFrameOnly();
-      // Use same frame as an overlay inside the modal (scaled by CSS)
       frameOverlay.src = frame.src;
     };
 
@@ -165,101 +151,61 @@
       ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
     }
 
-    // ---- Open Cropper Modal on file choose ----
-    fileInput.addEventListener('change', (e) => {
+    // File upload
+    fileInput.addEventListener('change', e => {
       const file = e.target.files && e.target.files[0];
       if (!file) return;
-
       const reader = new FileReader();
-      reader.onload = (ev) => {
+      reader.onload = ev => {
         previewImg.src = ev.target.result;
-
-        // Show modal & lock page scroll
         modal.classList.add('open');
-        modal.setAttribute('aria-hidden', 'false');
         document.body.style.overflow = 'hidden';
       };
       reader.readAsDataURL(file);
     });
 
-    // Initialize/destroy cropper when preview image changes visibility
     previewImg.addEventListener('load', () => {
       if (cropper) { cropper.destroy(); cropper = null; }
-
       cropper = new Cropper(previewImg, {
         aspectRatio: 1,
-        viewMode: 2,           // restrict the crop box to not exceed the canvas
-        dragMode: 'move',
+        viewMode: 1,
+        guides: false,
+        center: false,
         background: false,
-        autoCropArea: 1,       // start maximized
-        responsive: true,
-        zoomOnWheel: false,    // we handle wheel ourselves to prevent page scroll
-        ready() {
-          zoomRange.value = 1;
-        }
+        highlight: false,
+        autoCrop: true,
+        autoCropArea: 1,
+        dragMode: 'move',
+        cropBoxMovable: false,
+        cropBoxResizable: false,
+        toggleDragModeOnDblclick: false,
+        zoomOnWheel: true
       });
     });
 
-    // Mouse wheel inside modal = zoom (no page scroll)
-    document.getElementById('crop-stage').addEventListener('wheel', (e) => {
-      if (!cropper) return;
-      e.preventDefault(); // stop page scroll
-      const delta = e.deltaY < 0 ? 0.08 : -0.08;
-      cropper.zoom(delta);
-      // reflect current zoom in slider (approximate)
-      const data = cropper.getImageData();
-      const currentZoom = data.scaleX || 1;
-      zoomRange.value = Math.min(3, Math.max(0.2, currentZoom));
-    }, { passive: false });
-
-    // Zoom controls
-    zoomRange.addEventListener('input', () => {
-      if (!cropper) return;
-      cropper.zoomTo(parseFloat(zoomRange.value));
-    });
-    zoomIn.addEventListener('click', () => {
-      if (!cropper) return;
-      cropper.zoom(0.1);
-      const data = cropper.getImageData();
-      zoomRange.value = Math.min(3, Math.max(0.2, data.scaleX || 1));
-    });
-    zoomOut.addEventListener('click', () => {
-      if (!cropper) return;
-      cropper.zoom(-0.1);
-      const data = cropper.getImageData();
-      zoomRange.value = Math.min(3, Math.max(0.2, data.scaleX || 1));
-    });
-
-    // Confirm crop -> render to canvas exactly at frame size
+    // Confirm crop
     btnConfirm.addEventListener('click', () => {
       if (!cropper) return;
-
-      // Produce cropped bitmap at EXACT frame/canvas dimensions
       const cropped = cropper.getCroppedCanvas({
         width: canvas.width,
         height: canvas.height
       });
-
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.drawImage(cropped, 0, 0, canvas.width, canvas.height);
       ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
-
       closeModal();
     });
 
-    btnCancel.addEventListener('click', () => {
-      closeModal();
-    });
+    btnCancel.addEventListener('click', closeModal);
 
     function closeModal() {
       if (cropper) { cropper.destroy(); cropper = null; }
       modal.classList.remove('open');
-      modal.setAttribute('aria-hidden', 'true');
       document.body.style.overflow = '';
       previewImg.src = '';
     }
 
-    // Download final PNG
+    // Download
     btnDownload.addEventListener('click', () => {
       const link = document.createElement('a');
       link.download = 'WOIC2025_Badge.png';
@@ -267,7 +213,7 @@
       link.click();
     });
 
-    // Reset to frame only
+    // Reset
     btnReset.addEventListener('click', () => {
       fileInput.value = '';
       drawFrameOnly();
@@ -275,4 +221,5 @@
   </script>
 </body>
 </html>
+
 
