--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>WOIC 2025 Badge Generator</title>
+
+  <!-- Google Fonts: Montserrat -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
     :root {
       --bg: #14284b;
       --accent: #ffce00;
-      --font: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      --font: 'Montserrat', sans-serif;
     }
     body {
       margin: 0; font-family: var(--font);
       background: var(--bg); color: #fff;
       text-align: center; padding: 24px;
     }
-    h1 { margin: 0 0 10px; }
+    h1 { margin: 0 0 10px; font-weight: 700; }
+    p { font-weight: 400; }
     canvas {
       width: min(90vw, 800px); /* preview size */
       height: auto;
@@ -32,10 +37,11 @@
     }
     .btn {
       background: var(--accent); color: #111;
-      font-family: var(--font); font-weight: 700;
+      font-family: var(--font); font-weight: 600;
       border: none; border-radius: 8px;
       padding: 12px 24px; font-size: 16px;
       cursor: pointer; min-width: 160px;
+      transition: background 0.2s ease;
     }
     .btn:hover { background: #e0b800; }
     input[type="file"] { display: none; }
