--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>WOIC 2025 Badge Generator</title>
 
+  <!-- Open Graph (for LinkedIn, Facebook, etc.) -->
+  <meta property="og:title" content="WOIC 2025 Badge Generator" />
+  <meta property="og:description" content="Create your personalized 'I am attending #WOIC2025' badge by uploading your photo." />
+  <meta property="og:image" content="https://yourusername.github.io/woic-badge/woic-frame.png" />
+  <meta property="og:url" content="https://yourusername.github.io/woic-badge/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card (for Twitter/X) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="WOIC 2025 Badge Generator">
+  <meta name="twitter:description" content="Create your personalized 'I am attending #WOIC2025' badge by uploading your photo.">
+  <meta name="twitter:image" content="https://yourusername.github.io/woic-badge/woic-frame.png">
+
   <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
