--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <!-- Open Graph (for LinkedIn, Facebook, etc.) -->
   <meta property="og:title" content="WOIC 2025 Badge Generator" />
   <meta property="og:description" content="Create your personalized 'I am attending #WOIC2025' badge by uploading your photo." />
-  <meta property="og:image" content="https://worldopeninnovation/WOIC2025-Badge/thumbnail.png" />
-  <meta property="og:url" content="https://worldopeninnovation/WOIC2025-Badge/" />
+  <meta property="og:image" content="https://worldopeninnovation.github.io/WOIC2025-Badge/thumbnail.png" />
+  <meta property="og:url" content="https://worldopeninnovation.github.io/WOIC2025-Badge/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card (for Twitter/X) -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="WOIC 2025 Badge Generator">
   <meta name="twitter:description" content="Create your personalized 'I am attending #WOIC2025' badge by uploading your photo.">
-  <meta name="twitter:image" content="https://worldopeninnovation/WOIC2025-Badge/thumbnail.png">
+  <meta name="twitter:image" content="https://worldopeninnovation.github.io/WOIC2025-Badge/thumbnail.png">
 
   <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
