--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Open Graph (for LinkedIn, Facebook, etc.) -->
   <meta property="og:title" content="WOIC 2025 Badge Generator" />
-  <meta property="og:description" content="Create your personalized 'I am attending #WOIC2025' badge by uploading your photo." />
+  <meta property="og:description" content="Create your personalized 'I am attending #WOIC2025' badge by following this link and uploading your photo." />
   <meta property="og:image" content="https://worldopeninnovation.github.io/WOIC2025-Badge/thumbnail.png" />
   <meta property="og:url" content="https://worldopeninnovation.github.io/WOIC2025-Badge/" />
   <meta property="og:type" content="website" />
