--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>WOIC 2025 Badge Generator</title>
 
+  <!-- Standard meta description (fallback for SEO & LinkedIn) -->
+  <meta name="description" content="Create your personalized 'I am attending #WOIC2025' badge by following this link and uploading your photo." />
+
   <!-- Open Graph (for LinkedIn, Facebook, etc.) -->
   <meta property="og:title" content="WOIC 2025 Badge Generator" />
   <meta property="og:description" content="Create your personalized 'I am attending #WOIC2025' badge by following this link and uploading your photo." />
